# etl-pipeline

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
datawatch/: __init__.py
datawatch/alerts/: __init__.py  alert.py  formatter.py  manager.py
datawatch/alerts/channels/: __init__.py  discord.py  email.py  slack.py
datawatch/cli/: __init__.py  demo.py  main.py  output.py
datawatch/cli/commands/: __init__.py  alerts.py  connect.py  monitor.py  report.py  status.py
datawatch/connectors/: __init__.py  base.py  csv_connector.py  postgres.py  sqlite.py
datawatch/core/: __init__.py  config.py  monitor.py
datawatch/dashboard/: alert_detail.html  alerts.html  index.html
datawatch/dashboard/static/css/: styles.css
datawatch/dashboard/static/js/: alerts.js  charts.js  dashboard.js
datawatch/detectors/: __init__.py  base.py  distribution.py  null_rate.py  schema_drift.py
datawatch/server/: __init__.py  app.py  launcher.py
datawatch/server/routes/: __init__.py  alerts.py  dashboard.py  health.py  monitors.py
datawatch/storage/: __init__.py  alert_repo.py  baseline_repo.py  database.py
tests/: __init__.py  conftest.py
tests/synthetic/: __init__.py  corruption_injector.py  pipeline_simulator.py  test_end_to_end.py
tests/unit/: __init__.py  test_distribution.py  test_null_rate.py  test_schema_drift.py
