[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datawatch"
version = "0.1.0"
description = "Automated data quality monitoring for ETL pipelines."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "datawatch contributors" },
]
keywords = ["data-quality", "monitoring", "etl", "pipelines"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.39.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "typer>=0.23.0",
    "rich>=14.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "faker>=37.0.0",
]

[project.scripts]
datawatch = "datawatch.cli.main:app"

[tool.setuptools.packages.find]
include = ["datawatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["datawatch"]
omit = ["tests/*"]
